--- a/transactions/templates/transactions/receiver_transfermoney_email.html
+++ b/transactions/templates/transactions/receiver_transfermoney_email.html
@@ -1,5 +1,5 @@
 <h3>Hello {{user.first_name}} {{user.last_name}} </h3>
-<p>Received ${{amount}} to From: {{user.account.account_no}}!, Your Current Balance is {{user.account.balance}}</p>
+<p>Received ${{amount}} to From: {{recipient.account_no}}!, Your Current Balance is {{user.account.balance}}</p>
 
 <h4>Thanks for Banking Wih Us!!</h4>
 <h6>Islamiyahtech Bank</h6>
