--- a/transactions/templates/transactions/sender_transfermoney_email.html
+++ b/transactions/templates/transactions/sender_transfermoney_email.html
@@ -1,5 +1,5 @@
 <h3>Hello {{user.first_name}} {{user.last_name}} </h3>
-<p>Transfered ${{amount}} to Acc: {{recipient.account.account_no}} Successfull, Your Current Balance is {{user.account.balance}}</p>
+<p>Transfered ${{amount}} to Acc: {{recipient.account_no}} Successfull, Your Current Balance is {{user.account.balance}}</p>
 
 <h4>Thanks for Banking Wih Us!!</h4>
 <h6>Islamiyahtech Bank</h6>
