--- a/accounts/templates/accounts/user_registration.html
+++ b/accounts/templates/accounts/user_registration.html
@@ -15,7 +15,10 @@
     <h1 class="font-bold text-3xl text-center pb-5">Sign In</h1>
     <div class="w-full mt-10">
         <form method="post" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-            {% csrf_token %} {% for hidden_field in form.hidden_fields %} {{ hidden_field.errors }} {{ hidden_field }} {% endfor %}
+            {% csrf_token %} 
+            {% for hidden_field in form.hidden_fields %} 
+            {{ hidden_field.errors }} {{ hidden_field }} 
+            {% endfor %}
             
             <div class="flex flex-wrap -mx-3 mb-6">
                 <div class="w-full md:w-2/2 px-3 mb-6 md:mb-0">
