--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -27,7 +27,7 @@
             {{ hidden_field.errors }} {{ hidden_field }} 
             {% endfor %}
             
-            <div class="flex flex-wrap -mx-3 mb-6">
+            <div class="-mx-3 mb-6">
                 {% load crispy_forms_tags %}
                 {% csrf_token %}
                 {{ form|crispy }}
